--- a/src/main/resources/templates/fragment/common.html
+++ b/src/main/resources/templates/fragment/common.html
@@ -18,9 +18,7 @@
             </div>
             <ul class="unordered">
                 <li class="lists" id="drop-1" data-th-each="category : ${categories}"><a class="nav-content"
-                        data-th-href="|/customer/plp?category=${category.categoryId}|"
-                        data-th-text="${category.categoryTitle}"></a>
-
+                        data-th-href="|/customer/plp?category=${category.categoryId}|" data-th-text="${category.categoryTitle}"></a>
                 </li>
                 <li class="pntbtn">
                     <button id="parentbtn"><i class="fas fa-search"></i></button>
@@ -108,7 +106,10 @@
                 </div>
             </div>
         </div>
-        <div class="third-bar">
+        <div class="fashin-endbar">
+            <h5>ⓒ 2025 Fash-in LTD.RIMS</h5>
+        </div>
+        <!-- <div class="third-bar">
             <div class="woman">
                 <h4>Women</h4>
                 <span class="span-footer">Women Indian Wear</span>
@@ -183,10 +184,7 @@
                 <span class="span-footer">Complete Shampoo and Conditioner</span>
                 <span class="span-footer">Styling creams gels and waXes</span>
                 <span class="span-footer">Hair and Scalp Treatment oils</span>
-            </div>
-            <div class="fashin-endbar">
-                <h5>ⓒ 2025 Fash-in LTD.RIMS</h5>
-            </div>
+            </div> -->
         </div>
     </footer>
 
