--- a/src/main/resources/static/style/admin/product.css
+++ b/src/main/resources/static/style/admin/product.css
@@ -83,11 +83,11 @@ th {
     color: white;
 }
 
-.button {
-    background: #6b2e96;
+.button  {
+    background: #673147;
     color: white;
     border: none;
-    padding: 5% 7%;
+    padding: 6% 7%;
     cursor: pointer;
     border-radius: 0.313rem;
     margin-right: 0.5rem;
@@ -148,7 +148,7 @@ label {
 }
 
 #addproductbtn {
-    background-color: #6b2e96;
+    background-color: #673147;
     color: #EFEFEF;
     font-size: 1rem;
     width: 12.5rem;
@@ -182,7 +182,7 @@ label {
 }
 
 .popup {
-    position: fixed;
+    position: relative;
     top: 5%;
     left: 34%;
     background: white;
@@ -225,9 +225,9 @@ label {
 }
 
 .close-btn {
-    position: relative;
-    top: -4.4xvh;
-    left: 7vw;
+    position:absolute;
+    bottom:12.3vh;
+    left: 20vw;
     background: red;
     color: white;
     padding: 0.313rem;
