--- a/src/main/resources/static/style/pdp.css
+++ b/src/main/resources/static/style/pdp.css
@@ -5,7 +5,13 @@
 
 body {
     height: 100vh;
+    width:100vw;
     font-family: Arial, sans-serif;
+}
+
+main{
+    position:relative;
+    padding:0rem 8rem;
 }
 
 .navbar {
