--- a/src/main/resources/static/style/cart.css
+++ b/src/main/resources/static/style/cart.css
@@ -143,6 +143,7 @@ body {
 .container {
     margin-top:1rem;
     background-color: #EFEFEF;
+    height:390px;
 }
 
 .wrap {
@@ -275,15 +276,10 @@ button:hover {
     margin: 0 10px;
 }
 
-.place-order {
-    padding: 10px;
-    background: #67308D;
-}
-
 .order-btn {
-    position: relative;
+    position: absolute;
+    top:32rem;
     left: 10px;
-    bottom: 70px;
     width: 210px;
     font-weight: 500;
     background-color: #221737;
@@ -299,8 +295,8 @@ button:hover {
     position: absolute;
     right: 20px;
     top: 100px;
-    width: 460px;
-    height: 580px;
+    width: 280px;
+    height: 480px;
     background-color: #EFEFEF;
 }
 
@@ -314,6 +310,19 @@ button:hover {
     padding: 20px;
     font-size: 20px;
 }
+
+.dropdown-payment {
+    display: flex;  /* Makes it a flexible box */
+    align-items: center; /* Centers items inside */
+    justify-content: space-between; /* Aligns them properly */
+    position: absolute; /* Moves freely */
+    right: 20px;
+    width: 280px;
+    top:560px;
+    height: 80px;
+    color:#EFEFEF;
+}
+
 
 .address-dropdown,
 .payment-dropdown {
@@ -370,16 +379,6 @@ button:hover {
     text-decoration: none;
 }
 
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-}
 .modal-content {
     background-color: white;
     margin: 10% auto;
